fixed weird break on landing page responsiveness

--- a/src/components/landing/css/style.css
+++ b/src/components/landing/css/style.css
@@ -45,25 +45,25 @@
    }
  }
 
- @media only screen and (max-width : 600px) {
+ @media only screen and (max-width : 572px) {
   .icon-block {
     display: none;
   }
 }
 
-@media only screen and (max-width : 600px) {
+@media only screen and (max-width : 572px) {
   .featureContainer{
     display: none;
   }
 }
 
-@media only screen and (max-width : 600px) {
+@media only screen and (max-width : 572px) {
   .section-background{
     display: none;
   }
 }
 
-@media only screen and (max-width : 600px) {
+@media only screen and (max-width : 572px) {
   .btn-large {
   margin: auto;
   }
